--- a/src/app/education-feature/education/education.component.html
+++ b/src/app/education-feature/education/education.component.html
@@ -1,14 +1,14 @@
 <div class="max-w-7xl mt-8 mb-12  mx-auto px-4 sm:px-6 lg:px-8">
   <div class="max-w-3xl mx-auto">
     <!-- This example requires Tailwind CSS v2.0+ -->
-    <div class="bg-Jblue drop-shadow-2xl overflow-hidden rounded-2xl">
+    <div *ngFor="let e of educations$ | async" class="bg-Jblue drop-shadow-2xl overflow-hidden rounded-2xl mt-4">
       <div class="px-4 py-5 sm:px-6">
 
 
         <div class="flex flex-row">
           <div class="basis-[97%] ">
-            <h3 class="text-lg leading-6 font-bold text-white">Professionele Bachelor Toegepaste Informatica</h3>
-            <p class="mt-1 max-w-2xl text-sm text-white">study description</p>
+            <h3 class="text-lg leading-6 font-bold text-white">{{e.diploma}}</h3>
+            <p class="mt-1 max-w-2xl text-sm text-white">{{e.description}}</p>
           </div>
           <div>
             <a href="/educationform" class="text-white hover:bg-JorangeSelect items-center justify-center mt-1 rounded-lg">
@@ -23,21 +23,21 @@
         <dl class="grid grid-cols-1 gap-x-4 gap-y-8 sm:grid-cols-2">
           <div class="sm:col-span-1">
             <dt class="text-sm font-medium text-white">School:</dt>
-            <dd class="mt-1 text-sm text-white">Thomas more hogeschool</dd>
-            <dd class="mt-1 text-sm text-white">16/09/2018 tot heden</dd>
+            <dd class="mt-1 text-sm text-white">{{e.school}}</dd>
+            <dd class="mt-1 text-sm text-white">{{e.startDate}} tot {{e.endDate}}</dd>
           </div>
           <div class="sm:col-span-1">
             <dt class="text-sm font-medium text-white">Address</dt>
-            <dd class="mt-1 text-sm text-white">Kleinhoefstraat 4</dd>
-            <dd class="mt-1 text-sm text-white">2440 Geel (België)</dd>
+            <dd class="mt-1 text-sm text-white">{{e.street}} {{e.number}}</dd>
+            <dd class="mt-1 text-sm text-white">{{e.postalCode}} {{e.city}} ({{e.country}})</dd>
           </div>
           <div class="sm:col-span-1">
             <dt class="text-sm font-medium text-white">Field of study</dt>
-            <dd class="mt-1 text-sm text-white">Application development</dd>
+            <dd class="mt-1 text-sm text-white">{{e.fieldOfStudy}}</dd>
           </div>
           <div class="sm:col-span-1">
             <dt class="text-sm font-medium text-white">Website</dt>
-            <dd class="mt-1 text-sm text-white">www.thomasmore.be</dd>
+            <dd class="mt-1 text-sm text-white">{{e.website}}</dd>
           </div>
         </dl>
       </div>
